# pamac

./: .gitignore  AUTHORS  Makefile  NEWS  README  README.md  config.py  create_mo_files.sh  create_pot_file.sh  files_to_translate  meson.build  meson_options.txt  pamac  pamac-check-updates  pamac-check_updates.py  pamac-daemon  pamac-daemon.py  pamac-install  pamac-install.py  pamac-manager  pamac-manager.py  pamac-refresh  pamac-refresh.py  pamac-tray  pamac-tray.py  pamac-update  pamac-updater  pamac-updater.py  pamac.pot  pamac.py  pamac_update.py  policy_translation  pot_head  setup.py  start-pamac-daemon  test.py  transaction.py  tray  update_po_files.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.tx/: config
backend/: transaction.py  tray.py  update.py
data/: gpk-application.desktop  meson.build  pamac-update.desktop  pamac.desktop
data/applications/: meson.build  org.gnome.Software.desktop  org.manjaro.pamac.manager.desktop  pamac-install.desktop  pamac-installer.desktop  pamac-manager.desktop  pamac-manager.desktop.back  pamac-tray-appindicator.desktop  pamac-tray-budgie.desktop  pamac-tray.desktop  pamac-updater.desktop
data/completion/: bash_completion.in  fish_completion.in  meson.build  zsh_completion.in
data/config/: meson.build  pamac.conf
data/dbus/: meson.build  org.gnome.Software.service.in  org.manjaro.pamac.conf  org.manjaro.pamac.daemon.conf  org.manjaro.pamac.daemon.service.in  org.manjaro.pamac.manager.service.in  org.manjaro.pamac.service  org.manjaro.pamac.system.conf  org.manjaro.pamac.system.service  org.manjaro.pamac.system.service.in  org.manjaro.pamac.user.service
data/doc/: meson.build  pamac.8.asciidoc  pamac.conf.5.asciidoc
data/etc/: pamac.conf
data/gnome-shell/: meson.build  org.manjaro.pamac.manager.search-provider.ini
data/gnome-shell/pamac-updates@manjaro.org/: README.md  extension.js  metadata.json  stylesheet.css
data/mime/: meson.build  x-alpm-package.xml
data/networkmanager/: 99_update_pamac_tray
data/offline-upgrade/: meson.build  pamac-offline-upgrade.service
data/polkit/: meson.build  org.manjaro.pamac.policy  org.manjaro.pamac.policy.in
data/systemd/: meson.build  pamac-cleancache.service  pamac-cleancache.service.in  pamac-cleancache.timer  pamac-daemon.service  pamac-daemon.service.in  pamac-mirrorlist.service  pamac-mirrorlist.timer  pamac-system.service  pamac-system.service.in  pamac.service
examples/: pactree.vala
examples/alpm/: pactree.vala
examples/python/: appstream.py  empty_transaction.py  list_installed_pkgs.py  list_installed_pkgs_async.py  test-infos.py
gui/: dialogs.glade  dialogs.ui  manager.glade  manager.ui  pamac.glade  pamac_update.glade  updater.glade  updater.ui
pamac/: aur.py  callbacks.py  common.py  config.py  main.py  manager.py  pamac-daemon.py  transaction.py  tray.py  updater.py
po/: LINGUAS  Makefile  POTFILES  af.po  ar.po  ast.po  az.po  az_AZ.po  be.po  bg.po  bg_BG.po  bn.po  bn_BD.po  bs.po  bs_BA.po  ca-ES.po  ca.po  ca@valencia.po  ca_ES.po  create_pot_file.sh  cs.po  cs_CZ.po  cy.po  da.po  de.po  de_CH.po  de_DE.po  el.po  el_GR.po  en_GB.po  eo.po  es.po  es_419.po  es_AR.po  es_ES.po  es_MX.po  es_SV.po  et.po  et_EE.po  eu.po  (+78 more)
resources/: Makefile  aur_row.ui  back_row.ui  choose_dep_dialog.ui  choose_ignorepkgs_dialog.ui  choose_pkgs_dialog.ui  choose_provider_dialog.ui  history_dialog.ui  manager_window.ui  meson.build  package_row.ui  packages_chooser_dialog.ui  pamac.installer.gresource.xml  pamac.manager.gresource.xml  pamac.transaction.gresource.xml  pamac.updater.gresource.xml  preferences_dialog.ui  progress_box.ui  progress_dialog.ui  progress_window.ui  simple_row.ui  style.css  summary_row.ui  transaction_info_dialog.ui  transaction_sum_dialog.ui  updater_window.ui  updates_dialog.ui
src/: Makefile  alpm_config.vala  alpm_package.vala  alpm_utils.vala  aur.vala  aur3.vala  aur_model.vala  aur_row.vala  back_row.vala  choose_dep_dialog.vala  choose_ignorepkgs_dialog.vala  choose_pkgs_dialog.vala  choose_provider_dialog.vala  clean_cache.vala  cli.vala  common.vala  common_daemon.vala  daemon.vala  daemon_interface.vala  database-gtk.vala  database.vala  dependency_checker.vala  error.vala  fake_gnome_software.vala  flatpak_interface.vala  flatpak_plugin.vala  history_dialog.vala  installer.vala  local_config.vala  manager.vala  manager_window.vala  meson.build  mirrors_config.vala  outdated_checker.vala  package.vala  package_row.vala  packages_chooser_dialog.vala  packages_model.vala  pamac-refresh  pamac-tray-appindicator  (+32 more)
util/: alpm-util.c  alpm-util.h
vapi/: appstream-glib.vapi  flatpak.vapi  gdk-3.0.vapi  gio-2.0.vapi  glib-2.0.vapi  gtk+-3.0.vapi  libalpm.vapi  libcurl.vapi  polkit-gobject-1.vapi  snapd-glib.vapi
