option('enable-appindicator', type : 'boolean', value : false, description : 'tray icon using appindicator')
option('enable-snap', type : 'boolean', value : false, description : 'support snap packages')
option('enable-flatpak', type : 'boolean', value : false, description : 'support flatpak packages')
option('enable-fake-gnome-software', type : 'boolean', value : false, description : 'simulate gnome-software')
