gnome = import('gnome')

transaction_resources = gnome.compile_resources('transaction_resources',
	'pamac.transaction.gresource.xml')

manager_resources = gnome.compile_resources('manager_resources',
	'pamac.manager.gresource.xml')

installer_resources = gnome.compile_resources('installer_resources',
	'pamac.installer.gresource.xml')
