install_data('org.manjaro.pamac.user.service', install_dir: join_paths(get_option('datadir'), 'dbus-1/services'))
install_data('org.manjaro.pamac.system.service', install_dir: join_paths(get_option('datadir'), 'dbus-1/system-services'))
install_data('org.manjaro.pamac.system.conf', install_dir: join_paths(get_option('sysconfdir'), 'dbus-1/system.d'))
